# georgecloney

./: .gitignore  CloneLab-PRD-Final.md  README.md  TEST_SEQUENCES.md  package.json  pnpm-lock.yaml  tsconfig.base.json
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  digest.py  enzymes.py  ligation.py  parsers.py
backend/app/models/: schemas.py
backend/tests/: __init__.py  test_enzymes.py  test_parsers.py
